landing page work
created landing page, added responsive nav, added icons for socials on the bottom, added image icons

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Brown CSA</title>
+  <title>CLARA GUO</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -24,12 +24,12 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
   <link rel="stylesheet" href="css/utils.css">
-  <link href="hover.css" rel="stylesheet" media="all">
+  <link rel="stylesheet" href="css/hover.css">
+  <!-- <link href="hover.css" rel="stylesheet" media="all"> -->
 
   <!-- JS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <script type = "text/javascript" src="navigation.js"></script>
-  <script src="slideshow.js" defer></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
   <!-- Font Awesome
@@ -38,95 +38,53 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/csaLogoBW_icon.svg">
+  <link rel="icon" type="image/png" href="images/logoIcon.svg">
 
 </head>
 <body id="home">
 <div class="boundingcontainer"> 
-     <div class="header">
-      <div class="homeSection" onmouseover="hover(document.getElementById('homeIcon'));"
-          onmouseout="unhoverHomePage(document.getElementById('homeIcon'));" onclick="location.href = 'index.html';">
-          Brown CSA
-          <img id="homeIcon" src="images/csaLogoWhite.png">
+    <div class = "homeContainer">
+      <div class = "one-third column">
+        <img src="images/lamp.png" class = "lamp">
       </div>
-
-      <div class="burger">
-        <div class="line1"></div>
-        <div class="line2"></div>
-        <div class="line3"></div>
-        <div class="line4"></div>
+      <div class = "two-thirds column">
+        <div class = "nav">
+          <ul class="nav-links">
+            <li>
+              <a href = "#about" class = "about">About</a>
+            </li>
+            <li>&#160;|&#160;</li>
+            <li>
+              <a href = "#experience" class = "experience">Experience</a>
+            </li>
+            <li>&#160;|&#160;</li>
+            <li>
+              <a href = "#projects" class = "projects">Projects</a>
+            </li>
+            <li>&#160;|&#160;</li>
+            <li>
+              <a href = "#resume" class = "resume">Resume</a>
+            </li>
+          </ul>
+        </div>
+        <div class = "logo">
+          <img src="images/initials.png" class = "initials">
+        </div>
+        <div class = "icons">
+          <i class="fa fa-envelope" aria-hidden="true" style="font-size:2.5vmax;color:#FFE41D" 
+            onMouseOver="this.style.color='white'" onMouseOut="this.style.color='#FFE41D'"></i>
+          <a href="https://www.linkedin.com/in/claraguo" target="_blank">
+            <i class="fa fa-linkedin" aria-hidden="true" style="font-size:2.5vmax;color:#FFE41D"
+              onMouseOver="this.style.color='white'" onMouseOut="this.style.color='#FFE41D'"></i>
+          </a>
+          <a href="https://www.facebook.com/profile.php?id=100013451281570" target="_blank">
+            <i class="fa fa-facebook-square" aria-hidden="true" style="font-size:2.5vmax;color:#FFE41D"
+              onMouseOver="this.style.color='white'" onMouseOut="this.style.color='#FFE41D'"></i>
+          </a>
+        </div>
       </div>
     </div>
-
-  <!-- Moved dropdown outside of header and put it in dropdownContainer -->
-  <div class="dropdownContainer">
-    <ul class="nav-links">
-       <li>
-         <a href = "about.html" class = "hvr-fade">&#160;About&#160;</a>
-       </li>
-       <li>
-         <a href = "events.html" class = "hvr-fade">&#160;Events&#160;</a>
-       </li>
-       <li>
-         <a href = "membership.html" class = "hvr-fade">&#160;Membership&#160;</a>
-       </li>
-       <li>
-         <a href = "contact.html" class = "hvr-fade">&#160;Contact Us&#160;</a>
-       </li>
-  </ul>
-  </div>
-
-  <div class="homePageContainer">
-    <div class="slideshowBG">
-      <img src="images/slide2.jpg" class="slideshow-img">
-      <img src="images/slide3.jpg" class="slideshow-img">
-      <img src="images/slide4.jpg" class="slideshow-img">
-      <img src="images/slide5.jpg" class="slideshow-img">
-      <img src="images/slide6.jpg" class="slideshow-img">
-      <img src="images/slide7.jpg" class="slideshow-img">
-      <img src="images/slide8.jpg" class="slideshow-img">
-      <img src="images/slide9.jpg" class="slideshow-img">
-      <img src="images/slide10.jpg" class="slideshow-img">
-      <img src="images/slide11.jpg" class="slideshow-img">
-    </div>
-    <div class="homePageText">
-      <img src="images/csaLogo_LandingPage.svg">
-      <h1>Brown CSA</h1>
-    </div>
-  </div>
-
-  <div class="welcomeStatement">
-    <h5>Welcome to Brown University’s Chinese Students Association!</h5>
-    <p>
-      We are one of the largest student organizations on campus with over 700 members in all class years. 
-      Brown CSA seeks to celebrate and embrace Chinese culture at Brown, embodying both international and domestic strata of our diverse community.
-      Through sponsored lectures, annual Chinese holiday celebrations, general body assemblies, and social events, CSA hopes to foster forums for students to experience and discuss Chinese culture. 
-      All students, inclusive of any culture and ethnicity, are welcome to join us in embracing the Chinese identity. 
-    </p>
-    <p>
-      To the class of 2024 and to all new members, welcome home! Eligibility to CSA is open to all full-time undergraduate members of the Brown community and does not discriminate on the basis of race,
-      color, religion, age, national or ethnic origin, disability, status as a veteran, sexual orientation, gender identity, gender expression, or sex. To learn more about how to join our general body, 
-      check out the “Membership” tab in the navigation bar! 
-    </p>
-    <p>
-      If you are interested in joining our executive board, we will be hosting a virtual general body meeting this fall. More information to come. 
-    </p>
-    <p>
-      If you would like to contact us for any reason, we welcome you to check out the “Contact Us” tab in the navigation bar. Feel free to send us any questions, concerns, or comments on how we can do better!
-      We love partnering with other organizations to host events, promote, and build up the community around us. 
-    </p>
-    <p>
-      We’re so glad to have you here and we can’t wait to meet all of you. At Brown CSA, we strongly believe in the power of connection and it is our goal to make sure that our members know their identity and presence matters. 
-    </p>
-    <p>
-      Best, 
-    </p>
-    <p>
-      Presidents Charles Wang and Michelle Zhu 
-      <br>
-      Brown Chinese Students Association
-    </p>
-  </div>
+</div>
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
