completed slide in for Experience
added slide in when images are clicked, need to add image for content

--- a/experience.html
+++ b/experience.html
@@ -30,7 +30,7 @@
 
   <!-- JS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <script type = "text/javascript" src="navigation.js"></script>
+  <script type = "text/javascript" src="description.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
   <!-- Font Awesome
@@ -57,7 +57,7 @@
                 </li>
                 <li>&#160;|&#160;</li>
                 <li>
-                  <a href = "#projects" class = "projects">Projects</a>
+                  <a href = "projects.html" class = "projects">Projects</a>
                 </li>
                 <li>&#160;|&#160;</li>
                 <li>
@@ -76,24 +76,64 @@
           </div>
       </div>
     </div>
+    <div class="slideContainer">
+        <div class="img" id = "arrow">
+            <i class="fa fa-caret-right" aria-hidden="true"></i>
+        </div> 
+        <div class = "two-thirds column">
+            <ul class="exp-description">
+                <li>
+                  <h6>Description: <br>
+                    <p id = "description"></p>
+                  </h6>
+                </li>
+                <li>
+                  <h6>Numbers: <br>
+                    <p id = "date"></p>
+                    <p id = "numbers"></p>
+                  </h6>
+                </li>
+                <li>
+                  <h6>Skills Gained: <br>
+                    <p id = "skills"></p>
+                  </h6>
+                </li>
+              </ul>
+        </div>
+        <div class = "one-third column">
+            <img src="images/maotai.png" id ="refImg">
+        </div>
+    </div>
     <div class = "expContent">
-      <div class = "title">
-        <h2>Who I Am</h2><h2>.</h2>
+      <div class = "row">
+          <div class = "one-quarter column u-text-center">
+            <img src="images/sdpride.png" class = "img" id="sdpride">
+          </div>
+          <div class = "one-quarter column u-text-center">
+            <img src="images/stemsClear.png" class = "img" id="stems">
+          </div>
+          <div class = "one-quarter column u-text-center">
+            <img src="images/fsab.png" class = "img" id="fsab">
+          </div>
+          <div class = "one-quarter column u-text-center">
+            <img src="images/acluRed.png" class = "img" id="aclu">
+          </div>
       </div>
-      <p>
-        Hi! I'm Clara Guo.
-        <br>
-        <br>
-        &nbsp;&nbsp; I'm a sophomore studying Applied Math-Computer Science at Brown Univeristy.
-        I'm extremely passionate about understanding how to take data and information in the world and
-        making it easier for everyone to understand. I think it's especially important to do this work
-        with the intent of pushing forward social change driven by evidence.
-        <br>
-        &nbsp;&nbsp; I'm driven by this desire and it translates to what I do and how I do it. I'm someone who thinks
-        on their feet and isn't afraid of failing. I'm proactive, self-motivated, and independent, but I
-        also work well in teams.
-      </p>
-</div>
+      <div class = "row">
+        <div class = "one-quarter column u-text-center">
+          <img src="images/ljpc.png" class = "img" id="ljpc">
+        </div>
+        <div class = "one-quarter column u-text-center">
+          <img src="images/agss.png" class = "img" id="agss">
+        </div>
+        <div class = "one-quarter column u-text-center">
+          <img src="images/sharks.png" class = "img" id="sharks">
+        </div>
+        <div class = "one-quarter column u-text-center">
+          <img src="images/bwcs.png" class = "img" id="bwcs">
+        </div>
+    </div>
+    </div>
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
