--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                 </li>
                 <li>&#160;|&#160;</li>
                 <li>
-                  <a href = "#projects" class = "projects">Projects</a>
+                  <a href = "projects.html" class = "projects">Projects</a>
                 </li>
                 <li>&#160;|&#160;</li>
                 <li>
@@ -77,10 +77,10 @@
                   </h2>
               </div>
             </div>
-    <div class = "aboutContent">
+    <div class = "row" id="aboutContent">
       <div class = "title">
         <h2>Who I Am.</h2>
-        <!-- <h2 id= "titlePeriod">.</h2> -->
+    
       </div>
       <p>
         Hi! I'm Clara Guo.
@@ -90,6 +90,14 @@
         I'm extremely passionate about understanding how to take data and information in the world and
         making it easier for everyone to understand. I think it's especially important to do this work
         with the intent of pushing forward social change driven by evidence.
+        <br>
+        &nbsp;&nbsp; I'm driven by this desire and it translates to what I do and how I do it. I'm someone who thinks
+        on their feet and isn't afraid of failing. I'm proactive, self-motivated, and independent, but I
+        also work well in teams.
+        <br>
+        &nbsp;&nbsp; I'm driven by this desire and it translates to what I do and how I do it. I'm someone who thinks
+        on their feet and isn't afraid of failing. I'm proactive, self-motivated, and independent, but I
+        also work well in teams.
         <br>
         &nbsp;&nbsp; I'm driven by this desire and it translates to what I do and how I do it. I'm someone who thinks
         on their feet and isn't afraid of failing. I'm proactive, self-motivated, and independent, but I
