--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </li>
             <li>&#160;|&#160;</li>
             <li>
-              <a href = "#projects" class = "projects">Projects</a>
+              <a href = "projects.html" class = "projects">Projects</a>
             </li>
             <li>&#160;|&#160;</li>
             <li>
