finished resume and projects
resume added, projects added, still have to add photos to exp

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </li>
             <li>&#160;|&#160;</li>
             <li>
-              <a href = "#resume" class = "resume">Resume</a>
+              <a href = "resume.html" class = "resume">Resume</a>
             </li>
           </ul>
         </div>
