--- a/resume.html
+++ b/resume.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,7 +19,7 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/about.css">
+  <link rel="stylesheet" href="css/resume.css">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
@@ -30,6 +29,7 @@
 
   <!-- JS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <script type = "text/javascript" src="description.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
   <!-- Font Awesome
@@ -41,10 +41,10 @@
   <link rel="icon" type="image/png" href="images/logoIcon.svg">
 
 </head>
-<body id="about">
+<body id="experience">
 <div class="boundingcontainer"> 
-    <div class = "aboutBanner">
-        <img src="images/lamp.png" class = "lamp">
+    <div class = "resBanner">
+          <img src="images/lamp.png" class = "lamp">
             <div class = "nav">
               <ul class="nav-links" style="display:flex;">
                 <li>
@@ -64,46 +64,16 @@
                 </li>
               </ul>
             </div>
-            <div class = "bannerTitle">
-              <div class = "title">
-                <h1 class = "txt">About</h1><h1 class="period">.</h1>
-              </div>
-              <div class = "subtitle">
-                  <h2>
-                      <span class="text_1">Background</span>
-                      <span class="text_2">Passions</span>
-                      <span class="text_3">Goals</span>
-                      <span class="text_4">Hobbies</span>
-                  </h2>
-              </div>
-            </div>
-    <div class = "row" id="aboutContent">
-      <div class = "title">
-        <h2>Who I Am.</h2>
-    
+      <div class = "bannerTitle">
+        <div class = "title">
+            <h1 class = "txt">Resume</h1><h1 class="period">.</h1>
+          </div>
       </div>
-      <p>
-        Hi! I'm Clara Guo.
-        <br>
-        <br>
-        &nbsp;&nbsp; I'm a sophomore studying Applied Math-Computer Science at Brown Univeristy.
-        I'm extremely passionate about understanding how to take data and information in the world and
-        making it easier for everyone to understand. I think it's especially important to do this work
-        with the intent of pushing forward social change driven by evidence.
-        <br>
-        &nbsp;&nbsp; I'm driven by this desire and it translates to what I do and how I do it. I'm someone who thinks
-        on their feet and isn't afraid of failing. I'm proactive, self-motivated, and independent, but I
-        also work well in teams.
-        <br>
-        &nbsp;&nbsp; I'm driven by this desire and it translates to what I do and how I do it. I'm someone who thinks
-        on their feet and isn't afraid of failing. I'm proactive, self-motivated, and independent, but I
-        also work well in teams.
-        <br>
-        &nbsp;&nbsp; I'm driven by this desire and it translates to what I do and how I do it. I'm someone who thinks
-        on their feet and isn't afraid of failing. I'm proactive, self-motivated, and independent, but I
-        also work well in teams.
-      </p>
-</div>
+    </div>
+    <div class = "resContent">
+        <iframe src="https://docs.google.com/document/d/e/2PACX-1vS_KYEcO2m1r-Bd4loq5oJAVYfnxQHtyILr9oOYghvJnyN0cAF9SJMCnjFivrmPlUJs9YCtfa1k8hDc/pub?embedded=true"></iframe>
+    </div>
+    </div>
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
