--- a/resume.html
+++ b/resume.html
@@ -48,6 +48,10 @@
             <div class = "nav">
               <ul class="nav-links" style="display:flex;">
                 <li>
+                  <a href = "index.html" class = "index">Home</a>
+                </li>
+                <li>&#160;|&#160;</li>
+                <li>
                   <a href = "about.html" class = "about">About</a>
                 </li>
                 <li>&#160;|&#160;</li>
