added pics to exp, edited about writing
experience is completed, about needs a photo still

--- a/experience.html
+++ b/experience.html
@@ -105,7 +105,8 @@
               </ul>
         </div>
         <div class = "one-third column">
-            <img src="images/maotai.png" id ="refImg">
+          <img src="" id ="refImg1">
+          <img src="" id ="refImg2">
         </div>
     </div>
     <div class = "expContent">
