--- a/about.html
+++ b/about.html
@@ -93,19 +93,21 @@
         &nbsp;&nbsp; I'm a sophomore studying Applied Math-Computer Science at Brown Univeristy.
         I'm extremely passionate about understanding how to take data and information in the world and
         making it easier for everyone to understand. I think it's especially important to do this work
-        with the intent of pushing forward social change driven by evidence.
+        with the intent of pushing forward social change driven by evidence. I want to be part of that change.
+        <br>
+        &nbsp;&nbsp; Trying to figure out what I wanted to do with my life, I came across this article describing a 
+        North Carolina gerrymandering court case. At the hearing, math professors were called to testify on the likelihood 
+        that the majority party gerrymandered their voting districts and they were able to provide hard evidence arguing that it 
+        was nearly certain they had. After that day, I understood the power that STEM can have in our society and community. And 
+        I decided I wanted to do something similar.
         <br>
         &nbsp;&nbsp; I'm driven by this desire and it translates to what I do and how I do it. I'm someone who thinks
-        on their feet and isn't afraid of failing. I'm proactive, self-motivated, and independent, but I
-        also work well in teams.
+        on their feet and isn't afraid of failing. I'm proactive, self-motivated, creative and collaborative. I'm able to 
+        practice this in my academic career as well as my hobbies, some of which include playing soccer, cooking, and whittling. 
+        I always want to learn more, whether that means teaching myself how to carve block prints or learning html to make this website.
         <br>
-        &nbsp;&nbsp; I'm driven by this desire and it translates to what I do and how I do it. I'm someone who thinks
-        on their feet and isn't afraid of failing. I'm proactive, self-motivated, and independent, but I
-        also work well in teams.
-        <br>
-        &nbsp;&nbsp; I'm driven by this desire and it translates to what I do and how I do it. I'm someone who thinks
-        on their feet and isn't afraid of failing. I'm proactive, self-motivated, and independent, but I
-        also work well in teams.
+        &nbsp;&nbsp; Take a look at the rest of the website, and please contact me if you have any questions!
+        My socials and email can be found on the bottom right of the home page, and my resume in the top right.
       </p>
 </div>
 
