--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         <div class = "logo">
             <img src="images/initialsNoShadow.png" class = "initials">
         </div>
+        <h6 id = "clickDirection">Click the lamp to turn it on.</h6>
         <div class = "icons">
             <i class="fa fa-envelope" aria-hidden="true" style="font-size:2.5vmax;color:#FFE41D" 
               onMouseOver="this.style.color='white'" onMouseOut="this.style.color='#FFE41D'"></i>
