added captions to experience

--- a/experience.html
+++ b/experience.html
@@ -107,8 +107,11 @@
               </ul>
         </div>
         <div class = "one-third column" style="padding: 1vh 0;">
-          <img src="" id ="refImg1">
-          <img src="" id ="refImg2">
+          <figure id="fig">
+            <img src="" id ="refImg1">
+            <img src="" id ="refImg2">
+            <figcaption id="caption"></figcaption>
+          </figure>
           <p id="cap"></p>
         </div>
     </div>
