--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
               <i class="fa fa-facebook-square" aria-hidden="true" style="font-size:2.5vmax;color:#FFE41D"
                 onMouseOver="this.style.color='white'" onMouseOut="this.style.color='#FFE41D'"></i>
             </a>
+            <a href="https://github.com/guoclara" target="_blank">
+              <i class="fa fa-github" aria-hidden="true" style="font-size:2.5vmax;color:#FFE41D"
+                onMouseOver="this.style.color='white'" onMouseOut="this.style.color='#FFE41D'"></i>
+            </a>
         </div>
       </div>
     </div>
