--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
         <br>
         <br>
         Take a look at the rest of the website, and please contact me if you have any questions!
-        My socials and email can be found on the bottom right of the home page, and my resume in the top right.
+        My socials, email and github can be found on the bottom right of the home page, and my resume in the top right.
       </p>
 </div>
 
