added boc project

--- a/projects.html
+++ b/projects.html
@@ -79,6 +79,45 @@
       </div>
     </div>
     <div class = "projContent">
+      <h5>Full Stack At Brown</h5>
+      <div class = "projs">
+        <div class = "proj" id= "fsab">
+            <div class = "fsab">
+              <h6>
+                  <a href = "https://github.com/FullStackAtBrownTeam/CSA-Website">Brown Chinese Students Association</a>
+              </h6>
+              <p>
+                Static website created for Brown University's Chinese Students Association.
+              </p>
+              <p>
+                Summer 2020 <br>
+                Language: HTML, CSS, JavaScript <br>
+                Focus: User Interface Design, Responsive Design, Branding <br>
+                Team: Trevor Ing, Casey Kim
+              </p>
+            </div>
+        </div>  
+        <div class = "proj" id= "fsab">
+          <div class = "fsab">
+            <h6>
+                Brown Outing Club Weighted Lottery System
+            </h6>
+            <p>
+              Full stack development for Brown University's Outing Club. Users with a brown.edu email are able to register/log in 
+              and enter lotteries for upcoming trips they want to go on. Each user is weighted based on a variety of variables 
+              (e.g. if they won a trip slot prior, if they are a first timer, etc). There is an administrative page 
+              that allows authorized users to run lotteries; reset weights; and view, create, edit, and delete rows in the database 
+              tables. The lottery results are displayed in admin as well, and emails are sent out once results are calculated.
+            </p>
+            <p>
+              Summer 2020 <br>
+              Language: Python (Flask SQLAlchemy), HTML, CSS <br>
+              Focus: Web Applications, Templating, Security <br>
+              Team: Anna Zhao, Lucas Gelfond, Ethan Asis
+            </p>
+          </div>
+        </div>  
+      </div>
       <h5>Coursework</h5>
       <div class = "projs">
         <div class = "proj">
@@ -152,25 +191,6 @@
             </p>
           </div>
         </div>
-      </div>
-      <h5>Full Stack At Brown</h5>
-      <div class = "projs">
-        <div class = "proj" id= "fsab">
-            <div class = "fsab">
-              <h6>
-                  <a href = "https://github.com/FullStackAtBrownTeam/CSA-Website">Brown Chinese Students Association</a>
-              </h6>
-              <p>
-                Static website created for Brown University's Chinese Students Association.
-              </p>
-              <p>
-                Summer 2020 <br>
-                Language: HTML, CSS, JavaScript <br>
-                Focus: User Interface Design, Responsive Design, Branding <br>
-                Team: Trevor Ing, Casey Kim
-              </p>
-            </div>
-        </div>  
       </div>
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
