--- a/projects.html
+++ b/projects.html
@@ -110,7 +110,7 @@
               tables. The lottery results are displayed in admin as well, and emails are sent out once results are calculated.
             </p>
             <p>
-              Summer 2020 <br>
+              Summer 2020 - In Progress <br>
               Language: Python (Flask SQLAlchemy), HTML, CSS <br>
               Focus: Web Applications, Templating, Security <br>
               Team: Anna Zhao, Lucas Gelfond, Ethan Asis
